--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1043,6 +1043,10 @@ select {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1271,6 +1275,9 @@ select {
 }
 .w-2 {
   width: 0.5rem;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-56 {
   width: 14rem;
